--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,103 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,300i,400,400i,500,600,700');
 html {
     box-sizing: border-box;
 }
 *, *:before, *:after {
     box-sizing: inherit;
+}
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+#main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    .item {
+        max-width: 240px;
+        min-width: 180px;
+        flex: 1 1 auto;
+    }
+}
+#view-wrapper {
+    display: none;
+    opacity: 0;
+    &.loaded {
+        display: block;
+        opacity: 1;
+        transition: opacity 0.5s ease-in-out;
+    }
+}
+
+@keyframes loader-ripple {
+    0% {
+        top: 96px;
+        left: 96px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+
+    100% {
+        top: 18px;
+        left: 18px;
+        width: 156px;
+        height: 156px;
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes loader-ripple {
+    0% {
+        top: 96px;
+        left: 96px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+
+    100% {
+        top: 18px;
+        left: 18px;
+        width: 156px;
+        height: 156px;
+        opacity: 0;
+    }
+}
+.loader-css {
+    height: calc(100vh - 150px);
+    display: flex;
+    &.loaded {
+        display: none !important;
+    }
+}
+.loader-ripple {
+    position: relative;
+}
+
+.loader-ripple div {
+    box-sizing: content-box;
+    position: absolute;
+    border-width: 4px;
+    border-style: solid;
+    opacity: 1;
+    border-radius: 50%;
+    -webkit-animation: loader-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    animation: loader-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.loader-ripple div:nth-child(1) {
+    border-color: #78C2AD;
+}
+
+.loader-ripple div:nth-child(2) {
+    border-color: #F3969A;
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+}
+
+.loader-ripple {
+    width: 100px !important;
+    height: 100px !important;
+    -webkit-transform: translate(-50px, -50px) scale(0.5) translate(50px, 50px);
+    transform: translate(-50px, -50px) scale(0.5) translate(50px, 50px);
 }
